# depin-oracle

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  oracle.yml
dev/mosquitto/config/: mosquitto.conf
dev/solana/: cli-config.yml  token_mint_address
migrations/: 20210316025847_setup.up.sql  20211013151757_fix_mq_latest_message.up.sql  20220208120856_fix_concurrent_poll.down.sql  20240911170426_init.down.sql  20240911170426_init.up.sql  20240922114618_miner_entry.down.sql  20240922114618_miner_entry.up.sql  20240922223900_machine_payout.down.sql  20240922223900_machine_payout.up.sql
src/: lib.rs  main.rs
src/app/: config.rs  error.rs  mod.rs
src/broker/: config.rs  error.rs  mod.rs
src/cli/: config.rs  db.rs  mod.rs
src/drone/: entity.rs  error.rs  mod.rs  repo.rs
src/entity/: mod.rs
src/machine_payouts/: entity.rs  error.rs  mod.rs  repo.rs
src/miner/: entity.rs  error.rs  mod.rs  repo.rs
src/miner/address/: entity.rs  error.rs  mod.rs  repo.rs
src/primitives/: mod.rs
src/solana/: config.rs  error.rs  mod.rs
src/task/: create_token_account.rs  error.rs  mod.rs  process_payouts.rs
