[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_oracle"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
clap = { version = "4.4", features = ["derive", "env"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.0"
rumqttc = { version = "0.24.0", features = ["use-rustls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.117"
serde_with = "3.8.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "1.0.63"
