[package]
name = "oracle"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_oracle"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
clap = { version = "4.4", features = ["derive", "env"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.0"
rumqttc = { version = "0.24.0", features = ["use-rustls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.117"
serde_with = "3.8.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "1.0.63"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
spl-token = "6.0.0"
spl-associated-token-account = "5.0.1"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
